2014-03-14  Dieter Ries  <dieter.ries@psi.ch>

	* src/qtterminal/QtGnuplotItems.* src/qtterminal/QtGnuplotScene.cpp:
	Use the current linewidth to draw point symbols.

2014-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_parse_string_field):  Memory allocation for column
	header strings had O(n^2) dependence on the length of the first line.
	Replace this with an O(n) scheme.  This should also improve performance
	when handling string-value data columns in long input lines.
	Bug #1355

	* src/fit.c:  The bottleneck in the fitting code was lookup of dummy
	variables by name (4x10^9 lookups in fit.dem). All but the first lookup
	is unnecessary. Saving a pointer after the first lookup for later
	direct access speeds up fit.dem by a factor of 3x.

2014-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Bugfix for bold/italic.

	* demo/enhanced_utf8.dem:  Add bold/italic markup to demo.

	* docs/gnuplot.doc:  Add bold/italic examples to the section on
	enhanced text.

	* term/js/gnuplot_svg.js:  Work around a Firefox bug (incorrect
	text length calculation affects alignment of multiline hypertext).

2014-03-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c src/qtterminal/qt_term.cpp src/wxterminal/gp_cairo.c
	src/term_api.h term/svg.trm demo/bolditalic.dem:

	Revised syntax for bold/italic markup of text as per suggestions on
	gnuplot-beta list. Rather than the TeX-like \bf and \it it now accepts
	    {/font=size:Bold:Italic  text}
	    {/font:Bold:Italic=size  text}
	    {/:Bold text_{:/Normal text}}
	Tested on wxt, qt, svg, cairo terminals, libgd terminals, and PostScript.
	I don't know how it manages to work on libgd or PostScript (I did
	not modify the existing code), but suspect that it depends on having
	a clever system font manager.  Still needed: documentation and support
	for more terminals.

	* term/post.trm: Not all "set term post" commands were correctly